--- a/Web.config
+++ b/Web.config
@@ -21,7 +21,11 @@
       <namespaces>
         <add namespace="GridMvc" />
       </namespaces>
-    </pages></system.web>
+  </pages>
+    <customErrors mode="On" defaultRedirect="~/Error/DefaultError">
+      <error statusCode="404" redirect="~/Error/NotFound"/>
+    </customErrors>
+  </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -66,7 +70,7 @@
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
-      </provider></providers>
+    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </providers>
   </entityFramework>
 </configuration>
