New Create view. Added new columns for event data table.

--- a/Web.config
+++ b/Web.config
@@ -22,7 +22,7 @@
         <add namespace="GridMvc" />
       </namespaces>
   </pages>
-    <customErrors mode="On" defaultRedirect="~/Error/DefaultError">
+    <customErrors mode="Off" defaultRedirect="~/Error/DefaultError">
       <error statusCode="404" redirect="~/Error/NotFound"/>
     </customErrors>
   </system.web>
