--- a/EventManager.csproj
+++ b/EventManager.csproj
@@ -210,6 +210,7 @@
     <Content Include="Views\Event\Edit.cshtml" />
     <Content Include="Views\Shared\NotFound.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
+    <Content Include="Views\Event\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
