--- a/Web.config
+++ b/Web.config
@@ -1,11 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
-  https://go.microsoft.com/fwlink/?LinkId=301880
-  -->
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
   <appSettings>
@@ -13,19 +8,36 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+
+    <add key="ProyectName" value="yyyyyy" />
+    <add key="DefaultLanguage" value="yyyyyy" />
+    <add key="Log_XmlVisitorLogFileName" value="yyyyyy" />
+    <add key="Log_XmlContactLogFileName" value="yyyyyy" />
+    <add key="Log_TextLogFileName" value="yyyyyy" />
+    <add key="Log_RootDirectory" value="yyyyyy" />
+    <add key="Mail_From" value="yyyyyy" />
+    <add key="Mail_To" value="yyyyyy" />
+    <add key="Mail_Host" value="yyyyyy" />
+    <add key="Mail_Port" value="yyyyyy" />
+    <add key="Mail_User" value="yyyyyy" />
+    <add key="Mail_Password" value="yyyyyy" />
+    <add key="Mail_EnableSsl" value="yyyyyy" />
+    </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   <pages>
-      <namespaces>
-        <add namespace="GridMvc" />
-      </namespaces>
+    <namespaces>
+      <add namespace="GridMvc" />
+    </namespaces>
   </pages>
-    <customErrors mode="Off" defaultRedirect="~/Error/DefaultError">
-      <error statusCode="404" redirect="~/Error/NotFound"/>
-    </customErrors>
-  </system.web>
+  <customErrors mode="Off" defaultRedirect="~/Error/DefaultError">
+    <error statusCode="404" redirect="~/Error/NotFound"/>
+  </customErrors>
+  <authentication mode="Forms">
+    <forms name=".APPNAME" protection="All" cookieless="UseCookies" />
+  </authentication >
+  </system.web> 
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
