--- a/Web.config
+++ b/Web.config
@@ -35,7 +35,7 @@
     <error statusCode="404" redirect="~/Error/NotFound"/>
   </customErrors>
   <authentication mode="Forms">
-    <forms name=".APPNAME" protection="All" cookieless="UseCookies" />
+    <forms name=".EVENT_MANAGER" protection="All" cookieless="UseCookies" />
   </authentication >
   </system.web> 
   <runtime>
@@ -77,7 +77,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="database=qsg265; data source=localhost; user id=dbUser; password=123; persistsecurityinfo=true; sslMode=none;" />
+    <add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="database=eventmanager; data source=localhost; user id=dbUser; password=123; persistsecurityinfo=true; sslMode=none;" />
   </connectionStrings>
   <entityFramework>
     <providers>
